--- a/dev/compose.yaml
+++ b/dev/compose.yaml
@@ -3,11 +3,12 @@ services:
     image: n8nio/n8n:latest
     container_name: n8n-dev
     restart: unless-stopped
-    ports:
-      - 5678:5678
+    network_mode: host
     dns:
       - 8.8.8.8
       - 8.8.4.4
+    extra_hosts:
+      - "localhost:127.0.0.1"
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./data:/home/node/.n8n
